updated text on component with short explainer about what it does.

--- a/hero-subscription-form.html
+++ b/hero-subscription-form.html
@@ -42,13 +42,13 @@
                 <div class="col-lg-6 left-top">
                     
                     <div class="row">
-                        <p class="hero-headline">This is an attention grabbing headline right here.</h1>
+                        <p class="hero-headline">Hero Subscription Form</h1>
                     </div>
 
                     <div class="row">
                         <p class="hero-text">
-                            This is a great message that goes under the headline to really make it kick.
-                            It is really useful because it helps to drive the point home. 
+                            A Bootpart aimed at motivating visitors to take action.
+                            This is a Call To Action (CTA) component.
                         </p>
                     </div>
 
