Bug fix: add missing closing div tag.

--- a/call-to-action-bar.html
+++ b/call-to-action-bar.html
@@ -53,6 +53,8 @@
                 <button type="submit" class="btn btn-default">Yes, I want it!</button>
               </form>
 
+            </div>
+
           <!-- end row -->
           </row>
 
