--- a/call-to-action-button.html
+++ b/call-to-action-button.html
@@ -39,20 +39,16 @@
         <div class="container">
           <div class="row">
 
+            <!-- center the button -->
+            <div class="text-center">
 
-            <!--
-                Note: The button does not appear centered in the page.
-                      This is on purpose. The button is meant to break
-                      the layout and flow of the page. It stands out
-                      and prompts the user to stop and take action.
-            -->
-
-            <div class="col-lg-7 col-lg-offset-4 col-md-8 col-md-offset-4 col-sm-8 col-sm-offset-4 col-xs-8 col-xs-offset-2">
               <p><a class="btn btn-default">This is an action button</a></p>
+            
+            <!-- end text-center -->
             </div>
 
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
