Corrected page title.

--- a/action-card.html
+++ b/action-card.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Yelluw">
     <link rel="icon" href="">
 
-    <title>Bootparts - Call To Action Bar</title>
+    <title>Bootparts - Action Card</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
