--- a/bootparts/image-with-text/demo/image-with-text-demo.html
+++ b/bootparts/image-with-text/demo/image-with-text-demo.html
@@ -60,7 +60,7 @@
             </div>
           
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
