--- a/bootparts/image-with-text/image-with-text.html
+++ b/bootparts/image-with-text/image-with-text.html
@@ -23,7 +23,7 @@
             </div>
           
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
