--- a/bootparts/one-column-content/demo/one-column-content-demo.html
+++ b/bootparts/one-column-content/demo/one-column-content-demo.html
@@ -53,7 +53,7 @@
             </div>     
            
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
