--- a/bootparts/simple-footer/simple-footer.html
+++ b/bootparts/simple-footer/simple-footer.html
@@ -14,7 +14,7 @@
             
             </div>
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
