--- a/bootparts/text-with-image/text-with-image.html
+++ b/bootparts/text-with-image/text-with-image.html
@@ -22,7 +22,7 @@
             </div>
           
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
