--- a/bootparts/one-column-content/one-column-content.html
+++ b/bootparts/one-column-content/one-column-content.html
@@ -18,7 +18,7 @@
             </div>     
            
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
