--- a/bootparts/simple-footer/demo/simple-footer-demo.html
+++ b/bootparts/simple-footer/demo/simple-footer-demo.html
@@ -49,7 +49,7 @@
             
             </div>
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
