--- a/bootparts/text-with-image/demo/text-with-image-demo.html
+++ b/bootparts/text-with-image/demo/text-with-image-demo.html
@@ -57,7 +57,7 @@
             </div>
           
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
