--- a/bootparts/three-column-content/demo/three-column-content-demo.html
+++ b/bootparts/three-column-content/demo/three-column-content-demo.html
@@ -78,7 +78,7 @@
             </div>          
            
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
