--- a/bootparts/three-column-content/three-column-content.html
+++ b/bootparts/three-column-content/three-column-content.html
@@ -43,7 +43,7 @@
             </div>          
            
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
