--- a/bootparts/two-column-footer/demo/two-column-footer-demo.html
+++ b/bootparts/two-column-footer/demo/two-column-footer-demo.html
@@ -62,7 +62,7 @@
             </div>  
            
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
