--- a/bootparts/two-column-footer/two-column-footer.html
+++ b/bootparts/two-column-footer/two-column-footer.html
@@ -27,7 +27,7 @@
             </div>  
            
           <!-- end row -->
-          </row>
+          </div>
 
       <!-- end container-->
       </div>
