Navigation setup updated. Removed initial template content.

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -45,8 +45,10 @@
               <ul class="list-unstyled">
                 <li><a href="https://github.com/yelluw/Bootparts">Bootparts</a></li>
                 <li><a href="https://github.com/yelluw/Bootparts/releases/latest">Latest release: v0.4</a></li>
+                <li><a href="">Policies</a></li>
+                <li><a href="">F.A.Q.</a></li>
+                <li><a href="">Tutorial</a></li>
                 <li>Components</li>
-                <li><a href="#">Two Column Content</a></li>
                 
                 <li>External links</li>
                 <li><a href="http://yelluw.com">Yelluw</a></li>
@@ -65,30 +67,10 @@
                 </h1>
 
                 <p>
-                  Welcome to <a href="https://yelluw.github.io/Bootparts/">Bootparts</a> 
-                  Technical Documentation Page template. It was designed to simplify the process
-                  of writing technical documentation. The content uses unstyled HTML tags with a straightforward structure.
+                  Welcome to the Bootparts documentation. It covers the documentation for all releases.
+                  It is currently only available in English.
                 </p>
 
-                <h3>This template is designed to be readable.</h3>
-
-                <p>
-                  We don't like messy documentation pages. That's why this one is a simple two column page
-                  that is mobile friendly.
-                </p>
-
-                <h3>It is also desgined to be easy to use.</h3>
-
-                <p>
-                  Good documentation is not only about the content. How you structure the content also matters.
-                  That's why this template has a very simple structure.
-                </p>
-
-                <h3>No header. No footer. No hassle.</h3>
-                
-                <p>
-                  Put everything on the left side column. Keep it simple.
-                </p>
 
             <!-- end of right column -->
             </div>     
