Fixed wrong documentation URL.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="two-buttons">
-                        <a href="/documentation" class="btn btn-primary">Documentation</a>
+                        <a href="https://yelluw.github.io/Bootparts/documentation" class="btn btn-primary">Documentation</a>
                         <a href="https://github.com/yelluw/Bootparts/releases/latest" class="btn btn-success">Download</a>
                     </div>
                 </div>
