Updated documentation link text on footer.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6 left-column">
               <ul class="list-unstyled">
                 <li class="list-title">Navigation</li>
-                <li><a href="#">Documentation not yet released.</a></li>
+                <li><a href="#">Documentation</a></li>
                 <li><a href="https://github.com/yelluw/Bootparts">Bootparts</a></li>
                 <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
                 <li><a href="http://yelluw.com">Yelluw</a></li>
