Added link to homepage and documented image action card.

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -43,7 +43,8 @@
             <!-- left column -->
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 left-column">
               <ul class="list-unstyled">
-                <li><a href="https://github.com/yelluw/Bootparts">Bootparts</a></li>
+                <li><a href="https://yelluw.github.io/Bootparts">Home</a></li>
+                <li><a href="https://github.com/yelluw/Bootparts">Bootparts on Github</a></li>
                 <li><a href="#faq">F.A.Q.</a></li>
                 <!--<li><a href="">Tutorial</a></li>-->
                 <li><a href="#components">Components</a></li>
@@ -53,7 +54,7 @@
                 <li><a href="#center-aligned-headline">- Center Aligned Headline </a></li>
                 <li><a href="#hero-brand-two-buttons">- Hero Brand Two Buttons </a></li>
                 <li><a href="#hero-subscription-form">- Hero Subscription Form </a></li>
-                <li><a href="#">- </a></li>
+                <li><a href="#image-action-card">- Image Action Card</a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
@@ -350,17 +351,20 @@
                 </p>
 
 
-                <p class="component-title" id=""><p>
+                <p class="component-title" id="image-action-card">Image Action Card<p>
 
                 <span class="component-img">
-                  <img class="img-responsive" src="">
+                  <img class="img-responsive" src="https://raw.githubusercontent.com/yelluw/Bootparts/master/bootparts/image-action-card/image-action-card-screenshot.png">
                 </span>
 
                 <p class="component-body">
-                  <a href="">HTML</a>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/image-action-card/image-action-card.html">HTML</a>
                    - 
-                  <a href="">CSS</a> <br>
-                </p>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/image-action-card/image-action-card.css">CSS</a> <br>
+                  The image action card component is used to include a clear call to action in any part of the layout. It is commonly
+                  used to persuade the visitor to subscribe to a newsletter or download a resource. This is more useful than using
+                  a pop up and provides a better user experience.
+                  </p>
 
 
                 <p class="component-title" id=""><p>
