Added image with text documentation

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -55,7 +55,7 @@
                 <li><a href="#hero-brand-two-buttons">- Hero Brand Two Buttons </a></li>
                 <li><a href="#hero-subscription-form">- Hero Subscription Form </a></li>
                 <li><a href="#image-action-card">- Image Action Card</a></li>
-                <li><a href="#">- </a></li>
+                <li><a href="#image-with-text">- Image With Text</a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
@@ -244,14 +244,6 @@
                   A: I'm Pablo Rivera, a software engineer. I work at Yelluw.
                 </p>
 
-                <p class="faq-question">
-                  Q: Who owns Bootparts?
-                </p>
-
-                <p class="faq-answer">
-                  A: I do.
-                </p>
-
                 <hr>
 
                 <h3 id="components">Components</h3>
@@ -367,16 +359,19 @@
                   </p>
 
 
-                <p class="component-title" id=""><p>
+                <p class="component-title" id="image-with-text">Image With Text<p>
 
                 <span class="component-img">
-                  <img class="img-responsive" src="">
+                  <img class="img-responsive" src="https://raw.githubusercontent.com/yelluw/Bootparts/master/bootparts/image-with-text/image-with-text-screenshot.png">
                 </span>
 
                 <p class="component-body">
-                  <a href="">HTML</a>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/image-with-text/image-with-text.html">HTML</a>
                    - 
-                  <a href="">CSS</a> <br>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/image-with-text/image-with-text.css">CSS</a> <br>
+                
+                    The image with text component has a two column layout. The image is make responsive with Bootstrap's <code>img-responsive</code> class.
+                    It does not collapse. Smaller screens will see the side-by-side layout as well.
                 </p>
 
 
