--- a/documentation/index.html
+++ b/documentation/index.html
@@ -56,7 +56,7 @@
                 <li><a href="#hero-subscription-form">- Hero Subscription Form </a></li>
                 <li><a href="#image-action-card">- Image Action Card</a></li>
                 <li><a href="#image-with-text">- Image With Text</a></li>
-                <li><a href="#">- </a></li>
+                <li><a href="#one-column-content">- One Column Content</a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
@@ -375,16 +375,19 @@
                 </p>
 
 
-                <p class="component-title" id=""><p>
+                <p class="component-title" id="one-column-content">One Column Content<p>
 
                 <span class="component-img">
-                  <img class="img-responsive" src="">
+                  <img class="img-responsive" src="https://raw.githubusercontent.com/yelluw/Bootparts/master/bootparts/one-column-content/one-column-content-screenshot.png">
                 </span>
 
                 <p class="component-body">
-                  <a href="">HTML</a>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/one-column-content/one-column-content.html">HTML</a>
                    - 
-                  <a href="">CSS</a> <br>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/one-column-content/one-column-content.css">CSS</a> <br>
+                
+                   The one column content component was desgined for text. It is useful for long form content. The line-height was adjusted
+                   for readability.
                 </p>
 
 
