Added simple footer documentation

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -57,7 +57,7 @@
                 <li><a href="#image-action-card">- Image Action Card</a></li>
                 <li><a href="#image-with-text">- Image With Text</a></li>
                 <li><a href="#one-column-content">- One Column Content</a></li>
-                <li><a href="#">- </a></li>
+                <li><a href="#simple-footer">- Simple Footer</a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
@@ -386,22 +386,23 @@
                    - 
                   <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/one-column-content/one-column-content.css">CSS</a> <br>
                 
-                   The one column content component was desgined for text. It is useful for long form content. The line-height was adjusted
+                   The one column content component was designed for text. It is useful for long form content. The line-height was adjusted
                    for readability.
                 </p>
 
 
-                <p class="component-title" id=""><p>
+                <p class="component-title" id="simple-footer">Simple Footer<p>
                 
                 <span class="component-img">
-                  <img class="img-responsive" src="">
+                  <img class="img-responsive" src="https://raw.githubusercontent.com/yelluw/Bootparts/master/bootparts/simple-footer/simple-footer-screenshot.png">
                 </span>
 
                 <p class="component-body">
-                  <a href="">HTML</a>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/simple-footer/simple-footer.html">HTML</a>
                    - 
-                  <a href="">CSS</a> <br>
-                </p>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/simple-footer/simple-footer.css">CSS</a> <br>
+                The simple footer component is a standard plain footer. It does not collapse.
+                 </p>
 
 
                 <p class="component-title" id=""><p>
