Added three column footer documentation

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -60,7 +60,7 @@
                 <li><a href="#simple-footer">- Simple Footer</a></li>
                 <li><a href="#text-with-image">- Text With Image</a></li>
                 <li><a href="#three-column-content">- Three Column Content</a></li>
-                <li><a href="#">- </a></li>
+                <li><a href="#three-column-footer">- Three Column Footer</a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
@@ -440,16 +440,21 @@
                 </p>
 
 
-                <p class="component-title" id=""><p>
+                <p class="component-title" id="three-column-footer">Three Column Footer<p>
 
                 <span class="component-img">
-                  <img class="img-responsive" src="">
+                  <img class="img-responsive" src="https://raw.githubusercontent.com/yelluw/Bootparts/master/bootparts/three-column-footer/three-column-footer-screenshot.png">
                 </span>
 
                 <p class="component-body">
-                  <a href="">HTML</a>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/three-column-footer/three-column-footer.html">HTML</a>
                    - 
-                  <a href="">CSS</a> <br>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/three-column-footer/three-column-footer.css">CSS</a> <br>
+                
+                    The three column footer component is a footer that includes a newsletter subscription form. Use it to try and persuade
+                    visitors on the last part of your page. The component collapses on smaller screens. On smaller screens the form does 
+                    not extend the width of the container. It is set to be <code>400px</code> wide on screens smaller than <code>768px</code>.
+                   
                 </p>
 
 
