Added two column content documentation

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -61,7 +61,7 @@
                 <li><a href="#text-with-image">- Text With Image</a></li>
                 <li><a href="#three-column-content">- Three Column Content</a></li>
                 <li><a href="#three-column-footer">- Three Column Footer</a></li>
-                <li><a href="#">- </a></li>
+                <li><a href="#two-column-content">- Two Column Content</a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
                 <li><a href="#">- </a></li>
@@ -458,16 +458,19 @@
                 </p>
 
 
-                <p class="component-title" id=""><p>
+                <p class="component-title" id="two-column-content">Two Column Content<p>
 
                 <span class="component-img">
-                  <img class="img-responsive" src="">
+                  <img class="img-responsive" src="https://raw.githubusercontent.com/yelluw/Bootparts/master/bootparts/two-column-content/two-column-content-screenshot.png">
                 </span>
 
                 <p class="component-body">
-                  <a href="">HTML</a>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/two-column-content/two-column-content.html">HTML</a>
                    - 
-                  <a href="">CSS</a> <br>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/two-column-content/two-column-content.css">CSS</a> <br>
+                
+                    The two column content component was designed for content heavy pages that required a left-side navigation menu
+                    (like this documentation page). It does not collapse.
                 </p>
 
 
