Added two column footer component

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -62,12 +62,7 @@
                 <li><a href="#three-column-content">- Three Column Content</a></li>
                 <li><a href="#three-column-footer">- Three Column Footer</a></li>
                 <li><a href="#two-column-content">- Two Column Content</a></li>
-                <li><a href="#">- </a></li>
-                <li><a href="#">- </a></li>
-                <li><a href="#">- </a></li>
-                <li><a href="#">- </a></li>
-                <li><a href="#">- </a></li>
-                <li><a href="#">- </a></li>
+                <li><a href="#two-column-footer">- Two Column Footer</a></li>
 
                 <li>External links</li>
                 <li><a href="http://yelluw.com">Yelluw</a></li>
@@ -474,137 +469,19 @@
                 </p>
 
 
-                <p class="component-title" id=""><p>
+                <p class="component-title" id="two-column-footer">Two Column Footer<p>
 
                 <span class="component-img">
-                  <img class="img-responsive" src="">
+                  <img class="img-responsive" src="https://raw.githubusercontent.com/yelluw/Bootparts/master/bootparts/two-column-footer/two-column-footer-screenshot.png">
                 </span>
 
                 <p class="component-body">
-                  <a href="">HTML</a>
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/two-column-footer/two-column-footer.html">HTML</a>
                    - 
-                  <a href="">CSS</a> <br>
-                </p>
-
-
-                <p class="component-title" id=""><p>
-
-                <span class="component-img">
-                  <img class="img-responsive" src="">
-                </span>
-
-                <p class="component-body">
-                  <a href="">HTML</a>
-                   - 
-                  <a href="">CSS</a> <br>
-                </p>
-
-
-                <p class="component-title" id=""><p>
-
-                <span class="component-img">
-                  <img class="img-responsive" src="">
-                </span>
-
-
-                <p class="component-body">
-                  <a href="">HTML</a>
-                   - 
-                  <a href="">CSS</a> <br>
-                </p>
-
-
-                <p class="component-title" id=""><p>
-
-                <span class="component-img">
-                  <img class="img-responsive" src="">
-                </span>
-
-                <p class="component-body">
-                  <a href="">HTML</a>
-                   - 
-                  <a href="">CSS</a> <br>
-                </p>
-
-
-                <p class="component-title" id=""><p>
-
-                <span class="component-img">
-                  <img class="img-responsive" src="">
-                </span>
-
-                <p class="component-body">
-                  <a href="">HTML</a>
-                   - 
-                  <a href="">CSS</a> <br>
-                </p>
-
-
-                <p class="component-title" id=""><p>
-
-                <span class="component-img">
-                  <img class="img-responsive" src="">
-                </span>
-
-                <p class="component-body">
-                  <a href="">HTML</a>
-                   - 
-                  <a href="">CSS</a> <br>
-                </p>
-
-
-                <p class="component-title" id=""><p>
-
-                <span class="component-img">
-                  <img class="img-responsive" src="">
-                </span>
-
-                <p class="component-body">
-                  <a href="">HTML</a>
-                   - 
-                  <a href="">CSS</a> <br>
-                </p>
-
-
-                <p class="component-title" id=""><p>
-
-                <span class="component-img">
-                  <img class="img-responsive" src="">
-                </span>
-
-                <p class="component-body">
-                  <a href="">HTML</a>
-                   - 
-                  <a href="">CSS</a> <br>
-                </p>
-
-
-                <p class="component-title" id=""><p>
-
-                <span class="component-img">
-                  <img class="img-responsive" src="">
-                </span>
-
-                <p class="component-body">
-                  <a href="">HTML</a>
-                   - 
-                  <a href="">CSS</a> <br>
-                </p>
-
-
-                <p class="component-title" id=""><p>
-
-                <span class="component-img">
-                  <img class="img-responsive" src="">
-                </span>
-
-                <p class="component-body">
-                  <a href="">HTML</a>
-                   - 
-                  <a href="">CSS</a> <br>
-                </p>
-
-
+                  <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/two-column-footer/two-column-footer.css">CSS</a> <br>
+                
+                    The two column footer component was desgined for pages that lack a navigation bar and need to link to many
+                    other pages. It collapses on smaller screens.
 
             <!-- end of right column -->
             </div>     
