--- a/documentation/index.html
+++ b/documentation/index.html
@@ -506,7 +506,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               
               <ul class="list-inline">
-                <li>&copy; 2017 Yelluw</li>
+                  <li>&copy; 2017 <a href="http://yelluw.com">Yelluw</a></li>
               </ul>
             
             </div>
