Updated faq content

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
+    <meta name="description" content="Bootparts official technical documentation page">
     <meta name="author" content="Yelluw">
     <link rel="icon" href="">
 
@@ -93,7 +93,7 @@
                 </p>
 
                 <p class="faq-answer">
-                  A: The documentation is only available in English. No other languages are planned.
+                  A: The documentation is currently available in English. No other languages are planned.
                      Feel free to translate it. Make sure to open an issue on Github before you do.
                 </p>
 
@@ -110,7 +110,8 @@
                 </p>
 
                 <p class="faq-answer">
-                  A: I am not accepting any kind of contributions right now.
+                  A: We are currently not accepting any kind of contributions because the project is under
+                    active development. Once it reaches version 1.0 we will consider accepting contributions.
                 </p>
 
                 <p class="faq-question">
@@ -118,7 +119,7 @@
                 </p>
 
                 <p class="faq-answer">
-                  A: You can hire (for money) <a href="http://yelluw.com">Yelluw</a> to build whatever feature you may need.
+                  A: You can hire <a href="http://yelluw.com">Yelluw</a> to build whatever feature you may need.
                      Unpaid feature requests are not accepted.  
                 </p>
 
@@ -127,7 +128,7 @@
                 </p>
 
                 <p class="faq-answer">
-                  A: Go to the <a href="https://github.com/yelluw/Bootparts">Github</a> repo and open an issue. Read the issue guidelines before posting.
+                  A: Go to the <a href="https://github.com/yelluw/Bootparts">Github</a> repo and open an issue. Please read the issue guidelines before posting.
                 </p>
 
                 <p class="faq-question">
@@ -135,7 +136,7 @@
                 </p>
 
                 <p class="faq-answer">
-                  A: No.
+                  A: Not at this moment.
                 </p>
 
                 <p class="faq-question">
@@ -151,7 +152,7 @@
                 </p>
 
                 <p class="faq-answer">
-                  A: No. If you feel like donating money, go donate it to the Bootstrap project.
+                  A: No. If you feel like donating money, please go donate it to the Bootstrap project.
                 </p>
 
                 <p class="faq-question">
@@ -159,7 +160,7 @@
                 </p>
 
                 <p class="faq-answer">
-                  A: Because we mostly do business websites. The components follow the naming
+                  A: Because we mostly do business / marketing websites. The components follow the naming
                   conventions we use internally. We do digital marketing (among other things), thus the names.
                 </p>
 
@@ -177,8 +178,17 @@
                 </p>
 
                 <p class="faq-answer">
-                  A: The MIT license allows that.
+                  A: Yes, the MIT license allow that.
                 </p>
+
+                <p class="faq-question">
+                  Q: Can I turn one of the templates into a Wordpress theme?
+                </p>
+
+                <p class="faq-answer">
+                  A: Yes, the MIT license allow that. Do note that Wordpress themes require that you release them inder the GNU GPL license.
+                </p>                  
+
 
                 <p class="faq-question">
                   Q: Why did you choose Bootstrap version 3 and not version 4?
@@ -194,7 +204,7 @@
                 </p>
 
                 <p class="faq-answer">
-                  A: I don't know. Depends on whether we might need to use the new features.
+                  A: We don't know. Depends on whether we might need to use the new features.
                 </p>
 
                 <p class="faq-question">
@@ -228,15 +238,15 @@
 
                 <p class="faq-answer">
                   A: Open an issue on <a href="https://github.com/yelluw/Bootparts">Github</a>. Don't expect a prompt answer. 
-                  Replies are provided when I have a surplus of time and that is not very common.
+                  Replies are provided when we get time.
                 </p>
 
                 <p class="faq-question">
-                  Q: Who are you?
+                  Q: Who developed the code?
                 </p>
 
                 <p class="faq-answer">
-                  A: I'm Pablo Rivera, a software engineer. I work at Yelluw.
+                  A: Pablo Rivera, a software engineer at Yelluw.
                 </p>
 
                 <hr>
