added link to designers section

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -44,9 +44,9 @@
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 left-column">
               <ul class="list-unstyled">
                 <li><a href="https://yelluw.github.io/Bootparts">Home</a></li>
-                <li><a href="https://github.com/yelluw/Bootparts">Bootparts on Github</a></li>
+                <li><a href="https://github.com/yelluw/Bootparts">View on Github</a></li>
+                <li><a href="#desginers">Designers</a></li>
                 <li><a href="#faq">F.A.Q.</a></li>
-                <!--<li><a href="">Tutorial</a></li>-->
                 <li><a href="#components">Components</a></li>
                 <li><a href="#action-card">- Action Card </a></li>
                 <li><a href="#call-to-action-bar">- Call To Action Bar</a></li>
