Fixed anchor syntax

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -45,7 +45,7 @@
               <ul class="list-unstyled">
                 <li><a href="https://yelluw.github.io/Bootparts">Home</a></li>
                 <li><a href="https://github.com/yelluw/Bootparts">View on Github</a></li>
-                <li><a href="#desginers">Designers</a></li>
+                <li><a href="#designers">Designers</a></li>
                 <li><a href="#faq">F.A.Q.</a></li>
                 <li><a href="#components">Components</a></li>
                 <li><a href="#action-card">- Action Card </a></li>
