Added navigation links to pages

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -64,6 +64,11 @@
                 <li><a href="#two-column-content">- Two Column Content</a></li>
                 <li><a href="#two-column-footer">- Two Column Footer</a></li>
                 <li><a href="#templates">Templates</a></li>
+                <li><a href="#app-feature-page">- App Feature Page</a></li>
+                <li><a href="#book-feature-page">- Book Feature Page</a></li>
+                <li><a href="#hero-landing-page">- Hero Landing Page</a></li>
+                <li><a href="#open-source-project-page">- Open Source Project Page</a></li>
+                <li><a href="#technical-documentation-page">- Technical Documentation Page</a></li>
                 <li><a href="http://yelluw.com">Yelluw</a></li>
 
 
