Fixed incorrect anchors

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -531,7 +531,7 @@
        
                 </p>
 
-                  <p class="component-title" id="app-feature-page">Book Feature Page<p>
+                  <p class="component-title" id="book-feature-page">Book Feature Page<p>
 
                 <span class="component-img">
                   <img class="img-responsive" src="https://cloud.githubusercontent.com/assets/23017027/22009880/41af6736-dc5c-11e6-8244-710d0f07112b.png">
@@ -548,7 +548,7 @@
                 </p>
                   
 
-                  <p class="component-title" id="app-feature-page">Hero Landing Page<p>
+                  <p class="component-title" id="hero-landing-page">Hero Landing Page<p>
 
                 <span class="component-img">
                   <img class="img-responsive" src="https://cloud.githubusercontent.com/assets/23017027/22009885/49252460-dc5c-11e6-80c8-ca29d84d34b8.png">
