added link to templates showcase on main page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                           Desgined for people who don't have time to waste.
                         </p>
                         <p class="headline-content">  
-                          Features multiple ready-to-use templates that are responsive and mobile friendly.
+                          Features multiple ready-to-use <a href="https://yelluw.github.io/Bootparts/documentation#templates">templates</a> that are responsive and mobile friendly.
                         </p> 
                     
                     <!-- end headline -->
