--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="caption">
-                        <p>Current Release: v0.4.0</p>
+                        <p>Current Release: v0.5.0 | Published: July 16, 2017</p>
                     </div>
                 </div>
             </div>
