updated project page with clear positioning message. Item in issue #4

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="headline">
-                        <p>A collection of Bootstrap 3 components that simplify the process of building websites.</p>
+                        <p>A collection of useful ready-to-use components for Bootstrap 3.</p>
                     </div>
                 </div>
             <!-- end headline -->
@@ -89,12 +89,8 @@
                 <div class="row">
 
                     <div class="headline">
-                        
-                        <p class="headline-content">
-                          Desgined for people who don't have time to waste.
-                        </p>
                         <p class="headline-content">  
-                          Features multiple ready-to-use <a href="https://yelluw.github.io/Bootparts/documentation#templates">templates</a> that are responsive and mobile friendly.
+                          Features multiple ready-to-style <a href="https://yelluw.github.io/Bootparts/documentation#templates">templates</a> that are responsive and mobile friendly.
                         </p> 
                     
                     <!-- end headline -->
