--- a/documentation/index.html
+++ b/documentation/index.html
@@ -394,7 +394,7 @@
                   <a href="https://github.com/yelluw/Bootparts/blob/master/bootparts/two-row-squares/two-row-squares.css">CSS</a> <br>
                 
                     The two row squares component was designed for content that is presented in little blocks
-                    of text or images. It is a small grid of six items. Two rows of three items each.
+                    of text or images. It is a small grid of eight items. Two rows of four items each.
                 </p>
 
                   
