--- a/documentation/index.html
+++ b/documentation/index.html
@@ -86,6 +86,11 @@
               <div class="col-lg-9 col-md-9 col-sm-9 col-xs-8 right-column">
               
                 <h1>
+                 This project is no longer under development.
+                </h1>
+
+
+                  <h1>
                  Bootparts Documentation
                 </h1>
 
