updated project status

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="headline">
                         <p>A collection of useful ready-to-use components for Bootstrap 3.</p>
+                        <p> This project is no longer under development. </p>
                     </div>
                 </div>
             <!-- end headline -->
